force-app/main/default/objects/Support_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the Account (business) for which Support Case is opened</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Cases</relationshipLabel>
    <relationshipName>Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>