force-app/main/default/objects/Support_Case__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>Address</type>
</CustomField>