force-app/main/default/objects/Support_Case__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Depends on Support Case Type (field):
If incident - 1000n - example 100001, 100002, etc
If Complaint - 2000n - example 200001, 200002, etc
If Question - 3000n - example 300001, 300002, etc
If Request New - 4000n - example 400001, 400002, etc</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>