force-app/main/default/objects/Support_Case__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <description>Origin for the Support Case</description>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Case_Case_Origin</valueSetName>
    </valueSet>
</CustomField>