force-app/main/default/objects/Support_Case__c/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <description>Close date of the Support Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Close date</label>
    <type>Date</type>
</CustomField>