force-app/main/default/objects/Support_Case__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents a contact that should be contacted if any additional information is needed</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Cases</relationshipLabel>
    <relationshipName>Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>