force-app/main/default/objects/Support_Case__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information given for opening the Support Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>