force-app/main/default/objects/Support_Case__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email to be used for communication for the Support Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>