force-app/main/default/objects/Support_Case__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Severity of the problem for which the Support Case is opened</description>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Case_Impact</valueSetName>
    </valueSet>
</CustomField>