force-app/main/default/objects/Support_Case__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>In-depth notes for the Support Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>