force-app/main/default/objects/Support_Case__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the contact for which the Support Case is opened. Auto-populates based on the Contact lookup</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>