force-app/main/default/objects/Support_Case__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone that should be used for communication for the support case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>