force-app/main/default/objects/Support_Case__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Start date of the support case, should be the same as CreatedDate field (auto-populating)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start date</label>
    <type>Date</type>
</CustomField>