force-app/main/default/objects/Support_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the Support Case</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter short subject for the Support Case</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>