force-app/main/default/objects/Support_Case__c/listViews/Support_Case_Queue_Support_Case.listView-meta.xml
<ListView>
    <fullName>Support_Case_Queue_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Case Queue</label>
    <queue>Support_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>